# bouncer

./: .gitignore  ARCHITECTURE_V2.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  INTEGRATED_PLAN.md  PLAN.md  QA_REPORT.md  README.md  SKILL.md  TOOLS_TEMPLATE.md  _typos.toml  bouncer_mcp.py  cleanup.sh  codecov.yml  pyproject.toml  pytest.ini  pytest.py  replacements.txt  requirements-dev.txt  requirements-mcp.txt  template.yaml  test_local.py
.github/: dependabot.yml
data/: aws-operations.json  risk-rules.json
deployer/: Makefile  README.md  cross-account-role.yaml  template.yaml
docs/: RUNBOOK.md  architecture-diagram.md  architecture-mermaid.md  architecture-review-2026-02-23.md  architecture-review-action-items.md  architecture.html  notification-ux-review.md  trust-batch-flow.md
mcp_server/: README.md  __init__.py  classifier.py  db.py  schema.sql  server.py  telegram.py  test_mcp_server.py
scripts/: run-tests.sh  seed_frontend_configs.py  seed_frontend_project_config.py
specs/: presigned-batch.md  presigned-upload.md  security-sprint.md  unified-display-summary.md
src/: accounts.py  agent_keys.py  app.py  aws_clients.py  callbacks.py  callbacks_command.py  callbacks_grant.py  callbacks_query_logs.py  callbacks_silence.py  callbacks_upload.py  caller_identity.py  chain_analyzer.py  changeset_analyzer.py  commands.py  compliance_checker.py  config_store.py  constants.py  db.py  deploy_db.py  deploy_preflight.py  deployer.py  execute_context.py  execute_helpers.py  execute_pipeline.py  grant.py  help_command.py  mcp_admin.py  mcp_agent_key.py  mcp_config.py  mcp_confirm.py  mcp_deploy_frontend.py  mcp_execute.py  mcp_execute.py.bak  mcp_grant.py  mcp_history.py  mcp_presigned.py  mcp_query_logs.py  mcp_tools.py  mcp_upload.py  mcp_whoami.py  (+24 more)
target-account/: README.md  template.yaml
tests/: _module_list.py  conftest.py  test_accounts_main.py  test_agent_key_scope.py  test_agent_keys.py  test_app.py  test_audit_trail_s17_074.py  test_auto_approved_request_id_s14_071.py  test_aws_clients.py  test_bouncer.py  test_bouncer_exec_json_args_s17_085.py  test_bouncer_exec_rate_limited_s14_073.py  test_bouncer_exec_sh.sh  test_button_style_preserve_s14_060.py  (+131 more)
(+231 files in other folders)
