[project]
name = "bouncer"
version = "3.0.0"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "mcp_server"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
]
ignore = [
    "E501",  # line too long
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
